--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -12,10 +12,20 @@ collections:
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     media_folder: "/images/portfolio"
     fields: # The fields for each document, usually in front matter
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Description", name: "description", widget: "string"}
-      - {label: "Excerpt", name: "excerpt", widget: "string"}
-      - {label: "Date", name: "date", widget: "date"}
+      - label: "Title"
+        name: "title"
+        widget: "string"
+      - label: "Description"
+        name: "description"
+        widget: "string"
+      - label: "Excerpt"
+        name: "excerpt"
+        widget: "string"
+      - label: "Date"
+        name: "date"
+        widget: "datetime"
+        dateFormat: "DD/MM/YYYY"
+        timeFormat: ""
       - {label: "Featured Image", name: "image", widget: "image"}
       - label: "Tags"
         name: "tags"
