Update Netlify config datetime format

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -23,6 +23,7 @@ collections:
         widget: "string"
       - label: "Date"
         name: "date"
+        format: "YYYY-MM-DDTHH:mm"
         widget: "datetime"
         dateFormat: "DD/MM/YYYY"
         timeFormat: ""
