--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
   "dependencies": {
     "date-fns": "^2.21.3",
     "framer-motion": "^4.1.17",
+    "gray-matter": "^4.0.3",
+
     "next": "^10.2.2",
+    "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
+    "next-seo": "^4.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.32.0",
     "react-scroll": "^1.8.2",
-    "react-use": "^17.2.4"
+    "react-use": "^17.2.4",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.12.0",
@@ -32,19 +39,13 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gray-matter": "^4.0.3",
     "husky": "^6.0.0",
     "identity-obj-proxy": "^3.0.0",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
     "jest": "^26.6.3",
-    "next-compose-plugins": "^2.2.1",
-    "next-optimized-images": "^2.6.2",
-    "next-seo": "^4.24.0",
     "postcss": "^8.2.4",
     "postcss-preset-env": "^6.7.0",
-    "remark": "^13.0.0",
-    "remark-html": "^13.0.1",
     "responsive-loader": "^1.2.0",
     "sharp": "^0.28.2",
     "tailwindcss": "^2.1.2"
